# Robotics-and-Its-Applications-Term1

./: Lesson-3.pptx  Lesson-5.pptx  Lesson-6.pptx  Lesson-7.pptx  Lesson-8.pptx  README.md  talker_pub_subs_lesson4.py  talker_publish_lesson3.py  talker_subs_lesson4.py  velocity_pub_subs_lesson4.py  velocity_publish_lesson3.py  velocity_subs_lesson4.py
Lesson5/FirstPackage_WS/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Lesson5/FirstPackage_WS/devel/include/first_pack/: multiple.h  multipleRequest.h  multipleResponse.h
Lesson5/FirstPackage_WS/devel/lib/first_pack/: talker_publish_lesson3.py
Lesson5/FirstPackage_WS/devel/lib/pkgconfig/: first_pack.pc
Lesson5/FirstPackage_WS/devel/share/first_pack/cmake/: first_pack-msg-paths.cmake  first_packConfig.cmake
Lesson5/FirstPackage_WS/src/first_pack/: CMakeLists.txt
Lesson5/FirstPackage_WS/src/first_pack/src/: service_node.py
Lesson5/FirstPackage_WS/src/first_pack/srv/: multiple.srv
Lesson5/SecondPackage_WS/devel/: .catkin  setup.sh
Lesson5/SecondPackage_WS/devel/include/second_pack/: Do_It.h  Do_ItRequest.h  Do_ItResponse.h
Lesson5/SecondPackage_WS/devel/lib/pkgconfig/: second_pack.pc
Lesson5/SecondPackage_WS/devel/lib/second_pack/: my_client_pub.py
Lesson5/SecondPackage_WS/devel/share/second_pack/cmake/: second_pack-msg-extras.cmake  second_pack-msg-paths.cmake  (+1 more)
Lesson5/SecondPackage_WS/src/second_pack/: CMakeLists.txt
Lesson5/SecondPackage_WS/src/second_pack/src/: my_client_pub.py  my_server.py
Lesson5/SecondPackage_WS/src/second_pack/srv/: Do_It.srv
(+20 files in other folders)
